[styling] fix scrollbar issue which caused layout shift

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,6 +2,7 @@
 
 html {
 	scroll-behavior: smooth;
+	scrollbar-gutter: stable-both-edges;
 }
 body {
 	font-size: 16px;
